fix overflow

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -9,7 +9,7 @@ html, body {
     padding: 0;
 }
 html{
-    overflow-y: hidden !important;
+    overflow-x: hidden !important;
 }
 body {
     min-height: 100vh;
