--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -11,11 +11,14 @@
 body {
     background-position: center;
     background-size: cover;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
     width: 100%;
     max-width: 100%;
     margin: 0;
     padding: 0;
+}
+html{
+    overflow-x: hidden !important;
 }
 * {
     scroll-behavior: smooth;
